--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
 	font-family: 'Inter', sans-serif;
+	background-image: url('./images/stacked-waves-haikei.svg');
+	color: #fff;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .btn-icon {
@@ -21,8 +25,9 @@ body {
 	margin-top: 0.25rem;
 	display: block;
 	text-align: center;
-	color: rgb(246, 55, 55);
+	color: rgb(255, 0, 0);
 	font-size: 0.875rem;
+	font-weight: 500;
 }
 
 .error:empty:before {
@@ -53,22 +58,25 @@ svg {
 }
 
 .container {
-	/* background-color: beige; */
-	max-width: 400px;
+	/* max-width: 400px; */
+	width: min(420px, 80%);
 	padding-top: 200px;
 	margin-inline: auto;
 }
 
 /* WEATHER DATA STYLES */
 .weather-data-output {
-	background-color: #c4e2fe;
 	padding: 2rem;
+	background: rgba(255, 255, 255, 0.25);
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
 	border-radius: 0.5rem;
 }
 
 .weather-header {
 	display: flex;
-	gap: 0.5rem;
+	gap: 0.25rem;
 	font-weight: 500;
 	align-items: center;
 	margin-bottom: 2rem;
